wip: add songs